# betterstack-monitor-controller

./: .gitignore  Dockerfile  LICENSE  README.md  _version.py  betterstack_client.py  index.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  helm-release.yml
helm/betterstack-monitor-controller/: Chart.yaml  values.yaml
helm/betterstack-monitor-controller/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
helm/betterstack-monitor-controller/tests/: deployment_test.yaml  rbac_test.yaml  secret_test.yaml  serviceaccount_test.yaml
k8s/: deploy.yaml  secret.yaml
tests/: conftest.py  test_betterstack_client.py  test_client.py  test_main.py
