[project]
name = "betterstack-monitor-controller"
version = "0.1.0"
description = "Kubernetes controller that auto-manages BetterStack uptime monitors from Ingress annotations"
requires-python = ">=3.11"
dependencies = [
  "kopf>=1.37.0",
  "kubernetes>=28.0.0",
  "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "responses>=0.26.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.coverage.run]
source = ["."]
